# nix-bundler

./: Cargo.toml  bundled.nix  config.nix  lib.nix  main.nix
src/: lib.rs  main.rs
