[package]
name = "nix-bundler"
version = "0.1.0"
edition = "2024"
description = "A tool to bundle multiple Nix files into a single file"
authors = ["Nix Bundler Developer"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"
path-clean = "1.0"
